--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
         }
       } 
       @media (max-width: 900px) {
+        body {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
         .grid-section {
           display: grid;
           grid-template-columns: auto;
